// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements SchemaElement given embedded SchemaElements should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (SchemaElement
          (MemberElement
            (StringElement)
            (SchemaElement))))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SchemaElement
        (MemberElement
          (StringElement)
          (SchemaElement)))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (SchemaElement
          (MemberElement
            (StringElement)
            (SchemaElement)))))))
`;

exports[`refractor elements SchemaElement given fields of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SchemaElement)
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements SchemaElement should refract to semantic ApiDOM tree 1`] = `
(SchemaElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SchemaElement)
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SchemaElement)
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SchemaElement)
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement)))))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (StringElement)
      (NumberElement)))
  (MemberElement
    (StringElement)
    (NullElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (StringElement)))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (SchemaElement))
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement))))))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (SchemaElement))
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement))))))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (SchemaElement))
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement))))))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (BooleanElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (StringElement)
      (NumberElement)))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (SchemaElement))
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement))))))
  (MemberElement
    (StringElement)
    (ArrayElement
      (LinkDescriptionElement)))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ExternalDocumentationElement))
  (MemberElement
    (StringElement)
    (BooleanElement)))
`;
